navbar css updated

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
-.App {
-  text-align: center;
+/* .App {
+  font-family: sans-serif;
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -39,4 +38,4 @@
 
 button {
   font-size: calc(10px + 2vmin);
-}
+} */
