--- a/src/styles/collection.css
+++ b/src/styles/collection.css
@@ -3,7 +3,7 @@
     justify-content: space-around;
 }
 #collDiv{
-    width: 24%;
+    /* width: 24%; */
     height: 95%;
     margin-top: 10px;
     /* border: 1px solid black; */
