--- a/src/styles/collection.css
+++ b/src/styles/collection.css
@@ -1,41 +1,48 @@
-.collectionData{
+.collectionData {
     display: flex;
     justify-content: space-around;
+    /* height: 10%; */
+    border: 1px solid rgb(53, 32, 215);
 }
-#collDiv{
+
+#collDiv {
     /* width: 24%; */
-    height: 95%;
+
     margin-top: 10px;
     text-align: center;
     padding: 20px;
-    /* border: 1px solid black; */
-    
+    border: 1px solid rgb(212, 195, 195);
+
 }
 
-.collectionData {
-    /* border: 1px solid black; */
-  
+.collection {
+    border: 1px solid rgb(247, 7, 7);
+
+
 }
-#collDiv>img{
-   width: 70%;
-   height: 50%;
-   margin: auto;
+
+#collDiv img {
+    width: 70%;
+    height: 50%;
+    margin: auto;
 }
-img{
-    height: 100px;
-}
+
+/* img{
+    height: 60%;
+} */
 .collection>h2 {
-   text-align: left;
-   font-size: 25px;
-   margin-left: 30px;
-   font-weight: 500;
+    text-align: left;
+    font-size: 25px;
+    margin-left: 30px;
+    font-weight: 500;
 }
+
 #collDiv:hover {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 /* //////////////////////// */
 
-.superDeal>h2{
+.superDeal>h2 {
     margin-left: 5%;
 }
