--- a/src/styles/ProductDetails.css
+++ b/src/styles/ProductDetails.css
@@ -98,8 +98,10 @@
     display:flex;
     justify-content: flex-end;
 }
-
-.cartbtn>button{
+#linkbutton{
+   text-decoration: none;
+}
+.cartbtn>button ,.linkbtn{
   background-color:#f30240 ;
   border: 0;
   box-shadow: rgba(1,60,136,.5) 0 -1px 3px 0 inset,rgba(0,44,97,.1) 0 3px 6px 0;
