--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -8,7 +8,12 @@
 .firstdiv{
     width:100%;
     height:10%;
+    display:flex;
     background-color: rgb(255,255,255);
+    padding:1%;
+    /* display:flex;
+    margin:auto;
+    padding:1%; */
    
 }
 #footertext{
@@ -23,27 +28,38 @@
     margin-top:2%;
     background-color:  rgb(255,255,255);
     display:flex;
+    justify-content: space-around;
     padding:2%;
+   
     /* height:50px; */
 }
+
 .div1
 {
     /* border: 1px solid black; */
-    height: fit-content;
-    margin-top: -5px;
+    /* height: fit-content; */
+   
+   text-align: center;
+   padding-top: 1%;
+ 
+
+   
+    /* margin-top: -5px; */
+
 }
 .font
 {
     font-size: 20px;
-    font-weight: 700;
+    font-weight:500;
 }
 .div1 img
 {
-    width: 100%;
-    height:80px;
+    
+    width: 90%;
+    height:60px;
     text-align: center;
     box-sizing: border-box;
-    padding-top:2%;
+ 
 }
 .divs2
 {
@@ -54,7 +70,11 @@
     width: 225px;
 }
 
+.divs2>img{
+    height:20%;
+    width:15%;
 
+}
 
 .main_div2
 {
