--- a/src/styles/Confirm.css
+++ b/src/styles/Confirm.css
@@ -1,12 +1,71 @@
-.container{
-    /* display:flex; */
-    width:80%;
-   padding-left:10px;
-    margin:auto;
-    background-color:white;
-    border: 1px solid gray;
-
+.mainConatiner{
+    width:100%;
+    background-color:rgb(247,247,247);
 }
-.container>h2{
-    margin-right:1% ;
+
+.gearBestImgInConfirm{
+    width:100%;
+    height:100px;
+    background-color:white;
+    margin-bottom:10px;
+}
+.gearBestImgInConfirm>img{
+    height:60px;
+    width:190px;
+    margin-left:25%;
+    margin-top:0.5%;
+}
+.default{
+    width:80px;
+    height:30px;
+    background-color:yellow;
+    text-align:center;
+    margin-left:2%
+}
+.mainDivOfOrderItems{
+    display:flex;
+    margin:auto;
+    margin-bottom: 2%;
+    border:1px solid gray;
+    height:150px;
+    align-items:center;
+    padding:1%;
+    width:90%;
+    background-color: white;
+}
+.divForImg{
+    width:20%;
+    
+}
+
+.divForTitle{
+    display:flex;
+    width:60%;
+    
+}
+.ptagforPrice{
+    color:red;
+    font-size:20px;
+   display:flex;
+   justify-content: right;
+    padding:10%;
+}
+
+.mainDivOfOrderTotal{
+    display:flex;
+    margin:auto;
+    margin-bottom: 2%;
+    border:1px solid gray;
+    /* height:150px; */
+    /* align-items:center; */
+    padding:1%;
+    width:90%;
+    background-color:rgb(253,236,244);
+    justify-content: space-between;
+}
+
+.itemtotal{
+    display:flex;
+    justify-content:space-around;
+    line-height: 10px;
 }
