--- a/src/styles/Confirm.css
+++ b/src/styles/Confirm.css
@@ -1,6 +1,8 @@
 .mainConatiner{
     width:100%;
     background-color:rgb(247,247,247);
+    margin-top: 5%;
+    padding-top: 5%;
 }
 
 .gearBestImgInConfirm{
@@ -12,7 +14,7 @@
 .gearBestImgInConfirm>img{
     height:60px;
     width:190px;
-    margin-left:25%;
+    margin-left:4%;
     margin-top:0.5%;
 }
 .default{
@@ -95,4 +97,12 @@
     padding:5px;
     background-color:#ffda00;
     border:none
+}
+.container{
+    width:90%;
+ padding-left:30px;
+    background-color: white;
+    margin:auto;
+    border:1px solid gray;
+    margin-bottom: 30px;
 }
