--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -2,6 +2,7 @@
     /* border: 2px solid red; */
     width: 100%;
     height: 144px;
+    margin:auto;
 }
 #nav-up {
     /* border: 1px solid blue; */
@@ -81,7 +82,7 @@
 #nav-functions {
     /* border: 1px solid yellow; */
     height: 50%;
-    width: 900px;
+    width: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -159,8 +160,8 @@
     /* border: 1px solid green; */
     background-color: #ffda00;
     height: 25%;
-    width: 1180px;
-    margin-left: 85px;
+    width: 89.8%;
+    margin-left:64px;
     display: flex;
     justify-content: space-around;
     align-items: center;
