--- a/src/styles/collection.css
+++ b/src/styles/collection.css
@@ -1,6 +1,7 @@
 .collectionData {
     display: flex;
     justify-content: space-around;
+    width:100%;
     /* height: 10%; */
     /* border: 1px solid rgb(81, 77, 112); */
     
