--- a/src/styles/Confirm.css
+++ b/src/styles/Confirm.css
@@ -106,3 +106,6 @@
     border:1px solid gray;
     margin-bottom: 30px;
 }
+.placeOrder:hover{
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
