--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,13 +1,18 @@
 .footer{
-    width:100%;
+    width:89%;
     background-color: rgb(249,249,249);
     bottom: 0px;
- 
+    margin: auto;
+    font-family: sans-serif;
+    
+    padding:10px;
+    margin-top:10px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
    
 }
 
 .firstdiv{
-    width:100%;
+    width:92%;
     height:10%;
     display:flex;
     background-color: rgb(255,255,255);
