--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -3,6 +3,7 @@
     margin: auto;
     margin-top: 20px;
     /* border: 1px solid rgb(31, 18, 18); */
+    margin-bottom: 20px;
 }
 
 #imglogo img {
