--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -17,15 +17,13 @@
     display:flex;
     background-color: rgb(255,255,255);
     padding:1%;
-    /* display:flex;
-    margin:auto;
-    padding:1%; */
+    margin: auto;
    
 }
 #footertext{
     display:inline;
     margin:1%;
-    font-size: larger;
+    font-size: 13px;
 
 }
 .seconddiv{
@@ -55,8 +53,8 @@
 }
 .font
 {
-    font-size: 20px;
-    font-weight:500;
+    font-size: 18px;
+    /* font-weight:500; */
 }
 .div1 img
 {
@@ -98,11 +96,11 @@
 {
     display: flex;
     width:50%;
-    height:100%;
+    /* height:50%; */
     /* border: 1px solid yellow; */
     box-sizing: border-box;
     padding: 2%;
-   
+    margin-right: 15px;
 }
 .font1
 {
@@ -110,11 +108,12 @@
     font-weight: 550;
     color: gray;
     margin-top: 10px;
+    margin-right: 10px;
 }
 .points
 {
     width: 350px;
-    height: 40px;
+    height: 30px;
     font-size: 18px;
 }
 .sub_btn
@@ -122,7 +121,7 @@
     color: white;
     background-color: black;
     width: 150px;
-    height: 44px;
+    height: 35px;
     border: none;
     font-size: 16px;
     cursor: pointer;
@@ -138,11 +137,12 @@
 }
 .icons{
 
-    font-size: 40px;
+    font-size: 30px;
 }
 .list-unstyled{
     list-style: none;
     text-align: left;
+    font-size: 12px;
 }
 .row{
     display:flex;
